# xiaoxdummy

./: README.md
firmware/: README.md
firmware/dummy-35motor-fw/: Makefile  cmake_install.cmake
firmware/dummy-42motor-fw/: CMakeCache.txt  Ctrl-Step-STM32-fw.elf  Ctrl-Step-STM32-fw.hex  Ctrl-Step-STM32-fw.map  Makefile  cmake_install.cmake
firmware/dummy-42motor-fw/.cmake/api/v1/reply/: cache-v2-03dd61d1474c5c1eb201.json  cmakeFiles-v1-2dd107b9a26d9ffe3c6b.json  codemodel-v2-7ac66635479df2c989ca.json  index-2025-09-22T01-51-10-0738.json  target-Ctrl-Step-STM32-fw.elf-Debug-cbed990715903d819b86.json  toolchains-v1-67ff309a7d9b78a39f5d.json
firmware/dummy-42motor-fw/Port/Platform/Utils/: st_hardware.h
firmware/dummy-42motor-fw/UserApp/: common_inc.h  configurations.h
firmware/dummy-ref-core-fw/: CMakeCache.txt  Core-STM32F4-fw.elf  Core-STM32F4-fw.hex  Makefile  cmake_install.cmake
firmware/dummy-ref-core-fw/.cmake/api/v1/reply/: cache-v2-2a98a3f74f85e2f380dc.json  cmakeFiles-v1-298d53edc78ee1a6ad50.json  codemodel-v2-02a942aa04786b4922b0.json  index-2025-09-22T02-59-56-0068.json  target-Core-STM32F4-fw.elf-Debug-d427db6bfee73e4df5db.json
firmware/dummy-ref-core-fw/Core/Inc/: adc.h  main.h  spi.h  stm32f4xx_it.h  tim.h  usart.h
firmware/dummy-ref-core-fw/Core/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
firmware/dummy-ref-core-fw/UserApp/: main.cpp
ros2/xiaoxdummy_ws/src/xiaox_bringup/: CMakeLists.txt  package.xml
ros2/xiaoxdummy_ws/src/xiaox_bringup/launch/: robot.launch.py  sim.launch.py  xiaox_keyboard.py
ros2/xiaoxdummy_ws/src/xiaox_controllers/: CMakeLists.txt  package.xml
ros2/xiaoxdummy_ws/src/xiaox_controllers/config/: xiaox_controllers.yaml
ros2/xiaoxdummy_ws/src/xiaox_description/: CMakeLists.txt  package.xml
ros2/xiaoxdummy_ws/src/xiaox_description/rviz/: default.rviz
ros2/xiaoxdummy_ws/src/xiaox_description/urdf/: xiaox.urdf  xiaox_ros2_control.xacro
ros2/xiaoxdummy_ws/src/xiaox_driver/: package.xml  setup.cfg  setup.py
ros2/xiaoxdummy_ws/src/xiaox_driver/config/: serial_port.yaml
ros2/xiaoxdummy_ws/src/xiaox_driver/launch/: driver.launch.py
ros2/xiaoxdummy_ws/src/xiaox_driver/xiaox_driver/: driver_node.py
ros2/xiaoxdummy_ws/src/xiaox_hardware/: CMakeLists.txt  package.xml  xiaox_hardware.xml
ros2/xiaoxdummy_ws/src/xiaox_hardware/include/xiaox_hardware/: xiaox_hardware.hpp
ros2/xiaoxdummy_ws/src/xiaox_hardware/src/: xiaox_hardware.cpp
ros2/xiaoxdummy_ws/src/xiaox_interfaces/: CMakeLists.txt  package.xml
ros2/xiaoxdummy_ws/src/xiaox_interfaces/srv/: ReadJoints.srv  WriteJoints.srv
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/: CMakeLists.txt  package.xml  xiaoxdummy_control.xml
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/config/: rviz.rviz  xiaoxdummy.urdf  xiaoxdummy_controllers.yaml  xiaoxdummy_ros2_control.xacro
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/include/xiaoxdummy_control/: xiaoxdummy_hardware_interface.hpp
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/launch/: xiaoxdummy_control_launch.py  xiaoxdummy_gazebo_launch.py
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/meshes/: link5.stl  link6.stl
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/src/: xiaoxdummy_hardware_interface.cpp
ros2/xiaoxdummy_ws/src/xiaoxdummy_control/xiaoxdummy_control/: xiaoxdummy_keyboard.py
ros2/xiaoxdummy_ws/src/xiaoxdummy_firmware/: package.xml  setup.cfg  setup.py
ros2/xiaoxdummy_ws/src/xiaoxdummy_firmware/launch/: xiaoxdummy_firmware_server.launch.py
ros2/xiaoxdummy_ws/src/xiaoxdummy_firmware/xiaoxdummy_firmware/: firmware_session.py  serial_transport.py  xiaoxdummy_firmware_server.py
ros2/xiaoxdummy_ws/src/xiaoxdummy_hw/: CMakeLists.txt  package.xml  xiaoxdummy_hardware.xml
ros2/xiaoxdummy_ws/src/xiaoxdummy_hw/src/: xiaoxdummy_hardware.cpp
ros2/xiaoxdummy_ws/src/xiaoxdummy_interface/: CMakeLists.txt  package.xml
ros2/xiaoxdummy_ws/src/xiaoxdummy_interface/srv/: ReadFirmware.srv  WriteFirmware.srv
