<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xiaox_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Xiaox robot arm (real hardware and simulation)</description>
  <maintainer email="hydrangeahuman@gmail.com">jiehuang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_python</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xiaox_description</exec_depend>
  <exec_depend>xiaox_controllers</exec_depend>
  <exec_depend>xiaox_hardware</exec_depend>
  <exec_depend>xiaox_driver</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
