<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xiaoxdummy_firmware</name>
  <version>0.0.0</version>
  <description>Firmware-backed serial driver node for the Xiaoxdummy arm.</description>
  <maintainer email="hydrangeahuman@gmail.com">jiehuang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>xiaoxdummy_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
